Added new theme

--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/ripples.css">
 
+    <!-- Dropdown CSS -->
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/jquery.dropdown.css">
+
+    <!-- Snackbar CSS -->
+    <link rel="stylesheet" type="text/css" href="bower_components/snackbarjs/dist/snackbar.css">
+
     <!-- jQuery Javascript-->
     <script src='bower_components/jquery/dist/jquery.js'></script>
 
+    <!-- Snackbar Javascript-->
+    <script src='bower_components/snackbarjs/dist/snackbar.min.js'></script>
+
     <!-- Bootstrap Javascript -->
+    <script src='bower_components/bootstrap/dist/js/bootstrap.js'></script>
+
+    <!-- Bootstrap Material Javascript -->
     <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
+
+    <!-- Bootstrap Javascript -->
+    <script src='bower_components/bootstrap-material-design/dist/js/jquery.dropdown.js'></script>
 
     <!-- Clipboard.js and Plot.ly -->
     <script src="clipboard.js"></script>
@@ -31,21 +46,5 @@
 </head>
 
 <body>
-<h2>Plot File</h2><br>
-<input type="file" id="fileToPlot"><br>
-<br>
-Choose DIMM Card<br>
-  <select id="tableChooser"></select><br>
-  Choose Device<br>
-  <label for="deviceChooser">Choose Device</label> <select id="deviceChooser" class="form-control scriptInput"></select><br>
-  <button class="" id="displayResults">Show Results</button><br>
-  <table id="dataTable"></table><br>
-  <div id="textBoxHolder" style="width: 50%; height: 100%;"></div><br>
-<div id="plot" style="height: 600px;"></div><br>
-<br>
-<div id="plot2" style="height: 600px;"></div><br>
-<!-- <br>
-<div id="jjPlot" style="height: 800px;"></div><br>  -->
-
 </body>
 </html>
