Changed css so links don't change cursor

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <!-- Snackbar CSS -->
     <link rel="stylesheet" type="text/css" href="bower_components/snackbarjs/dist/snackbar.css">
 
+    <!-- My CSS -->
+    <style type="text/css">
+     a:hover {
+      cursor:pointer;
+     }
+    </style>
+
     <!-- jQuery Javascript-->
     <script src='bower_components/jquery/dist/jquery.js'></script>
 
@@ -41,7 +48,6 @@
     <script src="plotly.js"></script>
 
     <!-- My Javascript-->
-
     <script src="script.js"></script>
 </head>
 
